Fix firefox issue with backface-visibility

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -53,6 +53,7 @@
     backface-visibility: hidden;
     height: 100%;
     position: absolute;
+    transform: rotateX(0deg); // required for firefox
     width: 100%;
   }
 
